implemented DeletePost and ordered posts by created_at in GetAllPosts
